2003-01-23  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03671] Re: config.param is clear when configure -help
	* configure: test -f config.param

2003-01-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03665] imlib2 support (on X11)
	* configure: X11 inline image with Imlib2
		fix typo in fb/imlib2
	* w3mimg/x11/x11_w3mimg.c: USE_IMLIB2
		(x11_load_image): USE_IMLIB2
		(x11_show_image): USE_IMLIB2
		(x11_free_image): USE_IMLIB2
		(x11_get_image_size): USE_IMLIB2

2003-01-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03664] config.param is clear when configure -help
	* configure: config.param created after arg parsing

2003-01-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* map.c (follow_map_menu): if USE_IMAGE or MENU_MAP
	* proto.h (follow_map_menu): ditto

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03660] Re: fputs -> Strfputs
	* Str.h (Strncmp_charp): paren
		(Strncasecmp_charp): ditto
		(Strinsert): ditto
		(Strshrinkfirst): ditto
	* display.c (disp_err_message): added
	* file.c (loadGeneralFile): don't put function in macro arg
		(saveBuffer): ditto
	* frame.c (createFrameFile): ditto
	* proto.h (disp_err_message): macro->function
	* table.c (pushdata): if data is NULL, use ""
		(suspend_or_pushdata): if line is NULL, use ""
	* textlist.h (pushText): don't use (s) twice in a macro

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03659] Can't download from SSL.
	* istream.c (ISfileno): case IST_SSL

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03658] Re: Other user can see local cookie.
	* fm.h (rc_dir): init(NULL)
	* rc.c (config_file): deleted
		(init_rc): use rc_dir

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03657] fputs -> Strfputs
	* form.c (form_fputs_decode): use Strfputs()

2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03655] Re: file.c:image_source when undef USE_IMAGE